# oracle_trader_v2

./: .env.example  .gitignore  .session_state.json  AUDIT_REPORT.md  CHANGELOG_CORRECOES.md  README.md  __init__.py  __main__.py  accounts_found.txt  data_EURUSD_M15.csv  debug_symbol.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  specs_EURUSD.json  specs_EURUSD.txt  specs_USDJPY.json  specs_USDJPY.txt  test_results.txt
config/: default.yaml  executor_symbols.json  oracle_config.json  symbols_config.json
connector/: __init__.py  base.py  errors.py  hub_client.py  rate_limiter.py
core/: __init__.py  actions.py  config.py  constants.py  engine.py  features.py  models.py  state_machine.py  utils.py
docs/: ARCH_V2_HIGH_AVAILABILITY_v1.1.md  CONTEXTO_ORACLE_TRADER_V2.md  Conex#U00e3o VMs.txt  Conexão VMs.txt  DEPLOY_VM.md  DOCS_LINKS.md  GAP_ANALYSIS_PHASE_3.md  NOTEBOOK_REQUIREMENTS.md  ORACLE_V2_PROJECT_STRUCTURE.md  ORACLE_V2_SPECIFICATION_v1.1.md  ORACLE_V8_INCONSISTENCIAS.md  PROGRESS_METRICS.md  README.md  WEBSOCKET_PROTOCOL.md  guia_oracle_cloud_vm_arm.md  implementation_plan_v2.md  meta_calibrador_spec_v1.0.md  oracle_v2_notebook_1.0_reorganization.md
executor/: __init__.py  comment_builder.py  executor.py  lot_mapper.py  price_converter.py  risk_guard.py  sync_logic.py
infra/: __init__.py  broker_base.py  mt5_client.py  websocket_server.py
ml/: __init__.py
models/: __init__.py  enums.py  position.py  state.py  trade.py
notebooks/: oracle_v2_training_pipeline.ipynb
orchestrator/: __init__.py  __main__.py  cli.py  health.py  lifecycle.py  (+1 more)
(+91 files in other folders)
